Use getFirst() as OpenRewrite demands
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01NSFmcxcafn18625AwfV27r